--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.0",
     "element-plus": "^2.11.4",
     "lodash-es": "^4.17.21",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-i18n": "^9.14.5",
