--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@vue/compiler-sfc": "^3.5.22",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.12.0",
     "element-plus": "^2.11.4",
