--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Application Configuration
 VITE_APP_TITLE=Cinema Admin Dashboard
 VITE_API_BASE_URL=http://localhost:8080/api
+# VITE_API_BASE_URL=https://55383vkp-8080.asse.devtunnels.ms/api
 VITE_API_VERSION=v1
 
 # Authentication Configuration
