--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/compiler-sfc": "^3.5.22",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.12.0",
+    "bakong-khqr": "^1.0.20",
     "element-plus": "^2.11.4",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.544.0",
