--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.18",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1"
