--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 VITE_APP_TITLE=Cinema Admin Dashboard
 VITE_API_BASE_URL=http://localhost:8080/api
 # VITE_API_BASE_URL=https://55383vkp-8080.asse.devtunnels.ms/api
+VITE_API_BASE_URL=https://bvs045xm-8080.asse.devtunnels.ms/api
+
+
 VITE_API_VERSION=v1
 
 # Authentication Configuration
