--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.18",
     "@vue/compiler-sfc": "^3.5.22",
     "@vueuse/core": "^13.9.0",
     "axios": "^1.12.0",
@@ -23,6 +23,7 @@
     "lucide-vue-next": "^0.544.0",
     "pinia": "^3.0.3",
     "qrcode.vue": "^3.6.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.18",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1"
